<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_32dp"
    android:paddingVertical="@dimen/_8dp"
    tools:context=".ui.authentication.presentation.SignupScreenFragment">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/signupEmailInputLay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupEmailInputLay"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        app:layout_constraintBottom_toTopOf="@+id/signupInputPassLay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupEmailInputEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signupInputPassLay"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@+id/signupContinueBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupEmailInputLay"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signupInputPassEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.finalyear.common.utils.DietMaterialButton
        android:id="@+id/signupContinueBtn"
        style="@style/DietApp.Button.Action.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fui_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupInputPassLay"
        app:shapeAppearanceOverlay="@style/ThemeOverlay.App.Button.TextButton" />
</androidx.constraintlayout.widget.ConstraintLayout>