<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.presentation.settings.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_primary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="v1.0" />

                <ImageView
                    android:layout_width="@dimen/_72dp"
                    android:layout_height="@dimen/_72dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:text="Profile" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/stepGoalTv"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:text="@string/your_current_step_goals" />


            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:text="Privacy &amp; Policy" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_72dp" />

            <com.example.finalyear.common.utils.DietMaterialButton
                android:id="@+id/logOutBtn"
                style="@style/DietApp.Button.Action.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minWidth="@dimen/_180dp"
                android:text="@string/logout" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_72dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>